# HCBR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  casebase_full.txt  casebase_guess.txt  casebase_outcomes.txt  main.cpp  main_optimized.cpp  params.json  params_ensemble.json  test_cb.txt
bindings/python/: setup.py
cmake/: BuildType.cmake  Config.cmake  Dependencies.cmake  Target.cmake  Tests.cmake
data/: .gitignore  Justice.csv  README.md  SCDB_2016_01_caseCentered_Citation.csv  SCDB_2016_01_caseCentered_Citation_casebase.txt  SCDB_2016_01_caseCentered_Citation_features  SCDB_2016_01_caseCentered_Citation_outcomes.txt  SCDB_2016_01_caseCentered_Citation_terms.txt  SCDB_2016_01_justiceCentered_Citation_features  SCDB_2016_01_justiceCentered_Citation_outcomes.txt  SCDB_2016_01_justiceCentered_Citation_terms.txt  adult.txt  audiology_casebase.txt  audiology_outcomes.txt  breast.txt  breast_casebase.txt  casebase_from_CSV.py  cod-rna_outcomes.txt  covtype_outcomes.txt  data_processing.py  diabete.txt  diabete_casebase.txt  diabete_outcomes.txt  fourclass.txt  fourclass_casebase.txt  fourclass_outcomes.txt  fourclass_scale.txt  fourclass_scale_casebase.txt  fourclass_scale_outcomes.txt  german_number.txt  german_number_casebase.txt  gisette_scale_outcomes.txt  heart.txt  heloc_dataset_v1.csv  ijcnn1_outcomes.txt  ionosphere.txt  ionosphere_casebase.txt  ionosphere_outcomes.txt  justice_base.txt  justices.py  (+57 more)
data/echr_dataset/: README
data/parameters/: adult+heart.params.json  adult.optimized.params.json  adult.params.json  adult_optimized.params.json  audiology.params.json  breast+mushrooms.params.json  breast.optimized.params.json  breast.params.json  diabete.params.json  echr_circumstances_3.params.json  echr_circumstances_6.params.json  echr_circumstances_8.params.json  echr_facts_3.params.json  echr_facts_6.params.json  echr_facts_8.params.json  echr_full_3.params.json  echr_full_6.params.json  echr_full_8.params.json  echr_law_3.params.json  echr_law_6.params.json  echr_law_8.params.json  echr_procedure_3.params.json  echr_procedure_6.params.json  echr_procedure_8.params.json  echr_relevantLaw_3.params.json  echr_relevantLaw_6.params.json  echr_relevantLaw_8.params.json  fourclass.params.json  heart.optimized.params.json  heart_separated.params.json  heloc.params.json  ionosphere.params.json  liver.params.json  madelon.params.json  mushrooms.params.json  phishing.optimized.params.json  phishing.params.json  skin.optimized.params.json  sonar.params.json  splice.optimized.params.json  (+1 more)
doc/: CMakeLists.txt  hcbr.doxyfile.cmake  index.h
experiments/: all_validation.py  kfold_validation.py  random_casebase.py  sample_size.py  size.gp  validation_wrapper.py
experiments/scikit/: binary.py  size_mcc.gp
expriments/SCDB_2016_01/: learning_set_size.sh  validation.sh
papers/DOLAP_2018/: acmart-edbt-workshops.cls  paper.bib  paper.tex
papers/Information_Systems_2018/: paper.bib  paper.tex
results/SCDB_2016_01/: first_100.txt  first_1000.txt  first_500.txt  full.txt
results/adult/: adult_res.txt
results/audiology/: audiology_res.txt
results/breast/: breast_res.txt
results/genetic_algorithm/: adult_aggregated.txt  adult_res_0.txt  adult_res_1.txt  adult_res_2.txt  adult_res_3.txt  adult_res_4.txt  adult_res_5.txt  adult_res_6.txt  adult_res_7.txt  adult_res_8.txt  adult_res_9.txt  breast_aggregated.txt  breast_res_0.txt  breast_res_1.txt  breast_res_2.txt  breast_res_3.txt  breast_res_4.txt  breast_res_6.txt  breast_res_7.txt  breast_res_8.txt  breast_res_9.txt  heart_aggregated.txt  heart_res_0.txt  heart_res_1.txt  (+40 more)
script/: analyze_ga.py  biais.py  brier_score.py  genetic_algorithm.py  plot_prediction.py  prediction.py
src/: casebase.cpp  casebase_optimized.cpp  ensemble.cpp  hcbr.cpp  io.cpp  learning_sequence.cpp  sequence.cpp  utils.cpp
utils/: aggregate_confusion_matrix.py  analyze_runs.py  confusion_matrix.py  prediction_analysis.py  roc.py  time_analysis.py
(+1225 files in other folders)
